plugins/kotlin/idea/tests/testData/multiplatform/typeAliasToExpectClassExplicitReference/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>A<!> {
    fun <!LINE_MARKER("descr='Has actuals in jvm module'")!>commonMember<!>()
}

typealias TypealiasFromCommon = A
